tests/NormalTests/paczka1/fuzzy1/14866789.err
Error in line 5: 4XWmVzapjkP A736 99,9
Error in line 6: 4XWmVzapjkP A723 87,9
Error in line 1: mhZ S903 29,3
Error in line 18: rpjmQRmVza3 S137 22,8
Error in line 23: A736 S903 60,6
Error in line 17: bFXGPVSYA1G A736 166,7
